--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "api/index.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    }
+  ]
 }
