--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "chatbox-proxy",
   "version": "1.0.0",
-  "main": "api/index.js",
   "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.1.0",
     "express": "^4.18.2",
     "cors": "^2.8.5"
+  },
+  "scripts": {
+    "start": "node api/index.js"
   }
 }
