--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
+  "type": "module",
   "name": "chatbox-proxy",
   "version": "1.0.0",
-  "type": "module",
+  "main": "api/index.js",
   "dependencies": {
-    "@google/generative-ai": "^0.1.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "@google/generative-ai": "^0.1.3"
   },
-  "scripts": {
-    "start": "node api/index.js"
+  "engines": {
+    "node": "18.x"
   }
 }
