--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-  "type": "module",
   "name": "chatbox-proxy",
-  "version": "1.0.0",
-  "main": "api/index.js",
-  "engines": {
-    "node": "18.x"
-  }
+  "version": "1.0.0"
+}
